--- a/package.json
+++ b/package.json
@@ -1,44 +1,38 @@
 {
-  "name": "presto-ts",
-  "version": "2.1.0",
-  "description": "Typescript lib that enable projects to interact with the SQL Query engine PrestoDB",
+  "name": "trino-ts",
+  "version": "3.0.0",
+  "description": "Typescript lib that enable projects to interact with the SQL Query engine Trino",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist/**/*"
   ],
   "scripts": {
-    "test": "jest --config jestconfig.json",
+    "test": "jest --config jest.config.json",
     "build": "tsc",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "tslint -p tsconfig.json",
     "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run lint",
-    "preversion": "npm run lint",
-    "version": "npm run format && git add -A src",
-    "presto": "npm run build && node ./dist/src/Presto/presto.js"
+    "prepublishOnly": "npm test",
+    "version": "git add -A src",
+    "presto": "npm run build && node ./dist/src/trino/trino.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/joelgarciajr84/presto-ts.git"
+    "url": "git+https://github.com/LucasManerich/trino-ts"
   },
   "keywords": [
     "presto",
     "typescript"
   ],
-  "author": "Joel Garcia Jr",
+  "author": "Lucas Manerich",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/joelgarciajr84/presto-ts/issues"
+    "url": "https://github.com/LucasManerich/trino-ts/issues"
   },
-  "homepage": "https://github.com/joelgarciajr84/presto-ts#readme",
+  "homepage": "https://github.com/LucasManerich/trino-ts#readme",
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "jest": "^26.6.3",
-    "prettier": "^2.2.1",
     "ts-jest": "^26.5.6",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.1.3"
   },
   "dependencies": {
